--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -1,2 +1,3 @@
-<app-post></app-post>
-<app-user></app-user>
+<!--<app-post *ngFor="let post of posts" [post]="post"></app-post>-->
+<app-user *ngFor="let user of users" [user]="user"></app-user>
+
