--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,1 +1,4 @@
-<p>user works!</p>
+<div>
+  <p>{{user.id}}) {{user.name}}</p>
+  <button (click)="getPostOfUser(user.id)"> Get Post</button>
+</div>
