--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,4 +1,5 @@
 <div>
-  <p>{{user.id}}) {{user.name}}</p>
-  <button (click)="getPostOfUser(user.id)"> Get Post</button>
+  <p>{{user.id}}) {{user.name}}
+  <button ><a routerLink="/post/{{user.id}}"> GetPost</a></button>
+  </p>
 </div>
